tests/baselines/reference/typeParametersInStaticAccessors.errors.txt
==== tests/cases/compiler/typeParametersInStaticAccessors.ts (2 errors) ====
    class foo<T> {
        static get Foo(): () => T { return null; }
                                ~
!!! error TS2099: Static members cannot reference class type parameters.
        static set Bar(v: { v: T }) { }
                               ~
!!! error TS2099: Static members cannot reference class type parameters.
    } 